--- a/app/src/main/res/menu/quiz_menu.xml
+++ b/app/src/main/res/menu/quiz_menu.xml
@@ -2,4 +2,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 <item android:title = "@string/check"
     android:id="@+id/checkMenu"/>
+    <item android:title="@string/reset"
+        android:id="@+id/reset"/>
 </menu>
